--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
+  <section class="hero">
+    <div class="header">
+      <span class="name">Dwi Astika</span>
+      <span class="dot">•</span>
+      <span class="year">2025</span>
+    </div>
+
+    <div class="content">
+      <h1 class="title-porto">Portofolio</h1>
+    </div>
+
+    <div class="footer">
+      Sales / Marketing Support | Digital Marketing | Administration
+    </div>
+  </section>
+
   <div class="container">
     <h2 class="title">Skill & Expertise in Action</h2>
 
